code review suggestions from shaquil

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -20,7 +20,7 @@ This guide includes examples for both use cases. You can select one of the follo
 
 For the sake of this guide, examples are written for Next.js App Router, but they are supported by any React meta framework, such as Remix or Gatsby.
 
-## Add a custom page to the `<UserProfile />` component
+## Add a custom page to `<UserProfile />`
 
 Custom pages can be rendered inside the `<UserProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
 
@@ -153,7 +153,7 @@ The following example demonstrates two ways that you can render content in the `
   ```
 </CodeBlockTabs>
 
-## Add a custom link to the `<UserProfile />` component
+## Add a custom link `<UserProfile />`
 
 You can add external links to the `<UserProfile />` navigation sidebar using the `<UserButton.UserProfileLink />` component or the `<UserProfile.Link />` component, depending on your use case.
 
@@ -235,9 +235,7 @@ The following example adds a link to the homepage in the navigation sidebar of t
   ```
 </CodeBlockTabs>
 
-## Advanced use cases
-
-### Reorder default routes
+## Reorder default routes
 
 If you want to reorder the default routes, `Account` and `Security`, set the `label` prop to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
 
