--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -46,7 +46,7 @@ export default function Home() {
 
 The following example demonstrates how to use the `useUser()` hook to access the `user` object, which includes the `update` method for updating the user's data.
 
-For more information on the `update()` method, see the [`User`](/docs/references/javascript/user/user) reference.
+For more information on the `update()` method, see the [`User`](/docs/references/javascript/user/user#update) reference.
 
 ```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
