update clerk overview

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -185,6 +185,25 @@ The `Clerk` class also contains a number of methods for interacting with Clerk's
 - [`openUserProfile()`](/docs/components/user/user-profile#open-user-profile)
 - [`closeUserProfile()`](/docs/components/user/user-profile#close-user-profile)
 
+### `<OrganizationProfile />`
+
+- [`mountOrganizationProfile()`](/docs/components/organization/organization-profile#mount-organization-profile)
+- [`unmountOrganizationProfile()`](/docs/components/organization/organization-profile#unmount-organization-profile)
+- [`openOrganizationProfile()`](/docs/components/organization/organization-profile#open-organization-profile)
+- [`closeOrganizationProfile()`](/docs/components/organization/organization-profile#close-organization-profile)
+
+### `<OrganizationSwitcher />`
+
+- [`mountOrganizationSwitcher()`](/docs/components/organization/organization-switcher#mount-organization-switcher)
+- [`unmountOrganizationSwitcher()`](/docs/components/organization/organization-switcher#unmount-organization-switcher)
+
+### `<CreateOrganization />`
+
+- [`mountCreateOrganization`](/docs/components/organization/create-organization#mount-create-organization)
+- [`unmountCreateOrganization`](/docs/components/organization/create-organization#unmount-create-organization)
+- [`openCreateOrganization`](/docs/components/organization/create-organization#open-create-organization)
+- [`closeCreateOrganization`](/docs/components/organization/create-organization#close-create-organization)
+
 ## Additional methods
 
 In addition to the methods listed above, the `Clerk` class also has the following methods:
