Replace "Log In" with "Sign In" where appropriate (#785)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -21,7 +21,7 @@ When a new application is created, you will be presented with the following scre
 width={1879}
 height={1373}
 src="/docs/images/setup-clerk/create-sign-in-comp.png"
-alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social login options."
+alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social sign-in options."
 />
 
 From this menu, you can select the key sign-in information that your users will be providing. There are three main sections:
@@ -47,14 +47,14 @@ The authentication strategy refers to whether your application will rely on pass
 
 Connected accounts are third-party sources used to authenticate your users.
 
-- [Social Login (OAuth)](/docs/authentication/social-connections/oauth)
+- [Social Sign-in (OAuth)](/docs/authentication/social-connections/oauth)
 - [Web3 authentication](/docs/users/web3)
 
 Once you've selected the first methods you would like to try, click **Create Application**. If you're not sure about what you want to use, don't worry. You can change any of these settings from the Clerk Dashboard later on.
 
 ## How to update sign-in options
 
-If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the Clerk Dashboard and opening the **User & Authentication** drop down. From there, you can make changes to the necessary settings. For example, if you decide you would like to add GitHub as a social login provider, you can do so by navigating to the [**Social Connections**](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page and toggling on the GitHub provider.
+If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the Clerk Dashboard and opening the **User & Authentication** drop down. From there, you can make changes to the necessary settings. For example, if you decide you would like to add GitHub as a social sign-in provider, you can do so by navigating to the [**Social Connections**](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page and toggling on the GitHub provider.
 
 ## Sign-in examples
 
