--- a/docs/components/unstyled/sign-in-with-metamask.mdx
+++ b/docs/components/unstyled/sign-in-with-metamask.mdx
@@ -1,11 +1,11 @@
 ---
 title: <SignInWithMetamaskButton>
-description: The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
+description: The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure sign-in flow using MetaMask.
 ---
 
 # `<SignInWithMetamaskButton>`
 
-The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
+The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure sign-in flow using MetaMask.
 
 ## How to use the `<SignInWithMetamaskButton>` component
 
