--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -1190,7 +1190,7 @@ In email/password authentication, the sign-in is a process that requires users t
                   // redirect the user how you see fit.
                 }
                 else {
-                  /*Investigate why the login hasn't completed */
+                  /*Investigate why the sign-in hasn't completed */
                   console.log(signInAttempt);
                 }
               }
