--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -98,7 +98,7 @@ To add a new session, simply link to your existing sign-in flow. New sign-ins wi
 
 - [Email and password](/docs/custom-flows/email-password)
 - [Passwordless authentication](/docs/custom-flows/email-sms-otp)
-- [Social login (OAuth)](/docs/authentication/social-connections/oauth)
+- [Social sign-in (OAuth)](/docs/authentication/social-connections/oauth)
 
 For more information on how Clerk's sign-in flow works, check out the [detailed sign-in guide](/docs/custom-flows/overview#sign-in-flow).
 
