--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -22,7 +22,7 @@ Clerk allows developers or admins of an application to sign in as different user
 
 ## Actor tokens
 
-Actor tokens are similar to [sign-in tokens](https://clerk.com/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken). They can be used for one-time logins, but they result in impersonated sessions. You can obtain an actor token from our [Backend API](https://clerk.com/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken).
+Actor tokens are similar to [sign-in tokens](https://clerk.com/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken). They can be used for one-time sign-ins, but they result in impersonated sessions. You can obtain an actor token from our [Backend API](https://clerk.com/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken).
 
 Actor tokens need to declare the impersonator user (**actor**) and the impersonated user (**subject**). When Alice decides to impersonate Bob, they will issue an actor token. Alice is the actor and Bob is the subject of the Impersonation.
 
@@ -159,7 +159,7 @@ function Home() {
   return (
     <div>
       {actor && <span>user {actor.sub} has </span>}
-      logged in as user {userId}
+      signed in as user {userId}
     </div>
   );
 }
