--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -11,7 +11,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 You need to create a Clerk application in your [Clerk Dashboard](https://dashboard.clerk.com/) and configure the application to use **Sign in with Metamask**. For more information on how to set up a Clerk application, check out the [setup guide](/docs/quickstarts/setup-clerk). To enable Metamask authentication, check out [this guide](/docs/authentication/configuration/sign-in-options#social-o-auth-web3).
 
-Please ensure that you have downloaded the [Metamask plugin](https://metamask.io/download/) and installed it on your browser to ensure a seamless login flow.
+Please ensure that you have downloaded the [Metamask plugin](https://metamask.io/download/) and installed it on your browser to ensure a seamless sign-in flow.
 
 ## Creating a new Next.js app
 
