link to specific usage examples for setActive method

--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -1,11 +1,11 @@
 ---
 title: Redirect methods
-description: These are all methods on the Clerk class that help you manage route navigation based on the Clerk dashboard configuration.
+description: Explore methods on the Clerk class that help you manage route navigation based on the Clerk dashboard configuration.
 ---
 
 # Redirect methods
 
-These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage route navigation based on the Clerk dashboard configuration.
+These methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class help you manage route navigation based on the Clerk dashboard configuration.
 
 ## `navigate()`
 
