add js usage to organizationlist component reference

--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -1,6 +1,6 @@
 ---
 title: <OrganizationSwitcher /> component
-description: The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
+description: Clerk's <OrganizationSwitcher /> component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
 # `<OrganizationSwitcher />` component
