--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -204,6 +204,11 @@ The `Clerk` class also contains a number of methods for interacting with Clerk's
 - [`openCreateOrganization`](/docs/components/organization/create-organization#open-create-organization)
 - [`closeCreateOrganization`](/docs/components/organization/create-organization#close-create-organization)
 
+### `<OrganizationList />`
+
+- [`mountOrganizationList`](/docs/components/organization/organization-list#mount-organization-list)
+- [`unmountOrganizationList`](/docs/components/organization/organization-list#unmount-organization-list)
+
 ## Additional methods
 
 In addition to the methods listed above, the `Clerk` class also has the following methods:
